@@ -8,7 +8,7 @@
 # @param bold logical defining whe the text is bold
 # @param inflate.labels logical defining whether the textsize may exceed \code{cex=1}
 str2rect <-
-function(grb, fontcol, fill, bold, inflate.labels, cex_index) {
+function(grb, fontcol, fill, bold, inflate.labels, cex_index, align.labels, xmod.labels, ymod.labels) {
 	# wrap text to 1-5 sentences
 	txtWraps <- lapply(grb$name, FUN=function(txt) {
 		txtWrap <- list(txt)
@@ -58,25 +58,31 @@ function(grb, fontcol, fill, bold, inflate.labels, cex_index) {
 	#txtGrb <- textGrob(txt, x=grb$x+0.5*grb$width, y=grb$y+0.5*grb$height, gp=gpar(cex=cex, fontface=fontface, col=fontcol))
 	
 
-	align.labels <- c("left", "bottom")
-    xmod.labels <- 0
-	ymod.labels <- 0
-	
-    x <- grb$x
-	y <- grb$y
-    
 	if (align.labels[1]=="center") {
-        x <- x + 0.5*grb$width
-    } else if(align.labels[1]=="right") {
-        x <- x + grb$width
+        x <- grb$x + 0.5*grb$width
+        xjust <- .5
+	} else if(align.labels[1]=="left") {
+	    x <- grb$x + unit(.25, "lines")
+	    xjust <- 0
+	} else if(align.labels[1]=="right") {
+        x <- grb$x + grb$width -  unit(.25, "lines")
+        xjust <- 1
     }
 	if (align.labels[2]=="center") {
-	    y <- y + 0.5*grb$height
-	} else if(align.labels[1]=="top") {
-	    y <- y + grb$height
+	    y <- grb$y + 0.5*grb$height
+	    yjust <- .5
+	} else if(align.labels[2]=="top") {
+	    y <- grb$y + grb$height - unit(.25, "lines")
+	    yjust <- 1
+	} else if(align.labels[2]=="bottom") {
+	    y <- grb$y + unit(.25, "lines")
+	    yjust <- 0
 	}
+    
+    x <- x + unit(xmod.labels, "inch")
+	y <- y + unit(ymod.labels, "inch")
 	
-    txtGrb <- textGrob(txt, x=x, y=y, just=just, gp=gpar(cex=cex, fontface=fontface, col=fontcol))
+    txtGrb <- textGrob(txt, x=x, y=y, just=c(xjust, yjust), gp=gpar(cex=cex, fontface=fontface, col=fontcol))
 	
 	
 	
@@ -97,7 +103,21 @@ function(grb, fontcol, fill, bold, inflate.labels, cex_index) {
 	bckW <- mapply(txt, txtGrb$gp$cex, FUN=function(x,y, fontface){
 		convertWidth(grobWidth(textGrob(x, gp=gpar(cex=y, fontface=fontface))),"npc", valueOnly=TRUE)}, fontface, USE.NAMES=FALSE)
 
-	bckGrb <- rectGrob(x=txtGrb$x, y=txtGrb$y, width=bckW, height=bckH, gp=gpar(fill=fill, col=NA))
+	rectx <- txtGrb$x
+	recty <- txtGrb$y
+	
+	if (align.labels[1]=="left") {
+	    rectx <- rectx + unit(0.5*bckW, "npc")
+	} else if(align.labels[1]=="right") {
+	    rectx <- rectx - unit(0.5*bckW, "npc")
+	}
+	if (align.labels[2]=="bottom") {
+	    recty <- recty + unit(0.5*bckH, "npc")
+	} else if(align.labels[2]=="top") {
+	    recty <- recty - unit(0.5*bckH, "npc")
+	}
+    
+    bckGrb <- rectGrob(x=rectx, y=recty, width=bckW, height=bckH, gp=gpar(fill=fill, col=NA))
 
 
 	
